--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^5.1.2",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
