--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "aspnet-core-react-registration-login-example-client",
-  "version": "1.0.0",
-  "description": "Client for React with ASP.NET Core User Registration and Login Example",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cornflourblue/aspnet-core-react-registration-login-example.git"
-  },
-  "license": "MIT",
-  "scripts": {
-    "start": "webpack-dev-server --open"
-  },
+  "name": "nkl-bank",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
-    "antd": "^4.3.2",
-    "history": "^4.10.1",
-    "jwt-decode": "^2.2.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.3.4",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-number-format": "^4.4.1",
-    "react-recaptcha": "^2.3.10",
-    "react-redux": "^5.1.2",
-    "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "uuid": "^8.1.0"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "css-loader": "^3.5.3",
-    "html-webpack-plugin": "^2.26.0",
-    "path": "^0.12.7",
-    "style-loader": "^1.2.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:3000"
 }
